app/css/style.css
/* ... */
.keyboard-row {
	width: 100%;
	display: flex;
	flex-flow: row nowrap;
	justify-content: center;
	gap: var(--key-gap);
}

.keyboard-key {
	width: var(--key-width);
	height: 3.25rem;

	border: 2px solid;
	border-radius: var(--keyboard-key-border-radius);

	font-size: 1.375rem;

	cursor: pointer;

	display: flex;
	align-items: center;
	justify-content: center;

	background-color: var(--color-dark);
	color: var(--color-light);
	border-color: var(--color-dark);
	fill: var(--color-light);
}

.keyboard-key#backspaceKey,
.keyboard-key#enterKey {
	width: calc(1.5 * var(--key-width) + var(--key-gap));
}

.keyboard-key#enterKey {
	font-size: 0.75em;
}

.keyboard-key svg {
	pointer-events: none;
	width: 1.0625em;
	height: 1.0625em;
}

/* Replacing nested rules since they seem unsupported in some environements */
/* #keyboard.disabled {
	.keyboard-key {
		cursor: default;
	}
	.keyboard-key:hover {
		background-color: hsl(var(--c4-hue), var(--c4-sat), var(--c4-dark));
		color: hsl(var(--c4-hue), var(--c4-sat), var(--c4-light));
		border-color: hsl(var(--c4-hue), var(--c4-sat), var(--c4-dark));
		fill: hsl(var(--c4-hue), var(--c4-sat), var(--c4-light));
	}
} */
#keyboard.disabled .keyboard-key {
	cursor: default;
}
#keyboard.disabled .keyboard-key:hover {
	background-color: hsl(var(--c4-hue), var(--c4-sat), var(--c4-dark));
	color: hsl(var(--c4-hue), var(--c4-sat), var(--c4-light));
	border-color: hsl(var(--c4-hue), var(--c4-sat), var(--c4-dark));
	fill: hsl(var(--c4-hue), var(--c4-sat), var(--c4-light));
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                        MODALS                            */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

.modal-screen {
	display: none;
	position: fixed;
	z-index: var(--z-modalScreen);
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	cursor: pointer;
	background-color: var(--color-translucent);
}

.modal-content {
	width: min(500px, 94vw);
	height: fit-content;
	border: 3px solid;
	margin: 4rem auto;
	padding: 1.5rem;
	cursor: default;
	background-color: var(--color-light);
	color: var(--color-darker);
	border-color: var(--color-darker);
}

.modal-content h1 {
	font-size: 1.5rem;
	margin-bottom: 1rem;
}

.modal-content h2 {
	font-size: 1.125rem;
	margin-block: 1.25rem 0.75rem;
	border-bottom: 2px solid var(--color-dark);
}

.closeRow {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: end;
}

.closeButton {
	background-color: transparent;
	border: none;
	cursor: pointer;
}

.fa-xmark {
	font-size: 1.25rem;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                     TITLE SCREEN                         */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#titleScreen {
	position: fixed;
	z-index: var(--z-titleScreen);
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;

	background-color: hsl(var(--c1-hue), var(--c1-sat), var(--c1-med));
	color: hsl(var(--c1-hue), var(--c1-sat), var(--c1-dark));

	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
	gap: 3rem;
}

#titleScreenTitle {
	display: flex;
	flex-flow: column nowrap;
	align-items: end;
}

#titleScreenButtons {
	display: flex;
	flex-flow: column nowrap;
	gap: 0.875rem;
}

#titleScreenButtons button {
	background-color: hsl(var(--c1-hue), var(--c1-sat), var(--c1-light));
	color: hsl(var(--c1-hue), var(--c1-sat), var(--c1-dark));
	padding: 10px 20px;
	border: 3px solid;
	border-bottom: 6px solid;
	height: 3.5rem;
	font-size: 1.5rem;
	font-weight: bold;
	border-radius: 8px;
	cursor: pointer;
}

button#howToButton {
	background-color: transparent;
}

#titleScreenButtons button:active {
	border: 3px solid;
	border-bottom: 4px solid;
	transform: translateY(2px);
}

#titleScreenDetails {
	display: flex;
	flex-flow: column nowrap;
	gap: 0.1875rem;
	/* text-align: center; */
}

#titleScreenDetails #date {
	font-weight: bold;
}

#titleScreen h1 {
	font-size: 8rem;
	margin-bottom: 0.125em;
}

#links {
	font-size: 1.5em;
	margin-top: 0.25em;
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: center;
	gap: 0.75rem;
}

#titleScreen a {
	color: var(--color-dark);
}

@media (max-width: 519px) {
	#titleScreen h1 {
		font-size: 6rem;
		margin-bottom: 0.125em;
	}
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                      HELP SCREEN                         */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
.help-trigram {
	padding-inline: 0.5ch;
	background-color: white;
	border: 1px solid black;
	border-radius: 4px;
	text-transform: capitalize;
	font-weight: bold;
}

.help-trigram-subtle {
	font-weight: bold;
	text-decoration: underline;
}

ul {
	margin-block: 0.75rem 1.5rem;
}

li {
	margin-left: 2ch;
	margin-bottom: 0.625rem;
	/* font-size: 1.125rem; */
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                     STATS SCREEN                         */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#nextGameCountdownDiv {
	display: none;
	text-align: center;
}

#wordListValue {
	display: flex;
	flex-flow: column nowrap;
	gap: 0.5rem;
}

.stat-wordList-level {
	display: flex;
	flex-flow: row nowrap;
	gap: 0.5rem;
	align-items: center;
}

.stat-wordList-length {
	width: 3ch;
	text-align: right;
}

.stat-wordList-word {
	letter-spacing: 0.25rem;
}

.stat-wordList-trigram {
	border: 1px solid;
	border-radius: 4px;
	padding-left: 0.25rem;
	margin-right: 0.125rem;
	background-color: white;
	letter-spacing: 0.25rem;
}

#statListValue {
	display: flex;
	flex-flow: row;
	justify-content: space-between;
}

.stat-statList-item {
	width: 7ch;
	display: flex;
	flex-flow: column nowrap;
	text-align: center;
}

.stat-statList-itemValue {
	font-size: 2rem;
}

#statDistributionValue {
	display: flex;
	flex-flow: column nowrap;
	gap: 0.25rem;
}
/* ... */

